--- a/FamilyTraval/app/src/main/res/layout/activity_getcode.xml
+++ b/FamilyTraval/app/src/main/res/layout/activity_getcode.xml
@@ -51,7 +51,7 @@
 
             <EditText
                 android:id="@+id/code"
-                android:layout_width="fill_parent"
+                android:layout_width="210dp"
                 android:layout_height="fill_parent"
                 android:layout_toRightOf="@+id/imgCode"
                 android:background="@null"
@@ -69,8 +69,9 @@
                 android:layout_width="94.0dip"
                 android:layout_height="33.0dip"
                 android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10.0dip"
+                android:layout_marginRight="10dip"
                 android:background="@drawable/login_yzm_oval_shape"
                 android:text="重新获取"
                 android:textColor="#ff888888"
