--- a/MyApplicatuon/app/src/main/res/layout/activity_detail_point.xml
+++ b/MyApplicatuon/app/src/main/res/layout/activity_detail_point.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_detail_point"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="www.aiyi.com.myapplicatuon.activity.DetailPointActivity">
 
-    <include layout="@layout/layout_main_header"></include>
+    <include
+        android:id="@+id/il"
+        layout="@layout/layout_main_header"></include>
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/view"
+        android:layout_height="40dp"
+        android:layout_below="@+id/il"
         android:layout_margin="5dp"
         android:layout_marginTop="10dp"
         android:background="@color/short_blue">
@@ -26,7 +26,7 @@
             android:layout_marginLeft="20dp"
             android:text="奖扣时间"
             android:textColor="@color/background_color"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/point1"
@@ -37,7 +37,7 @@
             android:layout_marginRight="20dp"
             android:text="分值"
             android:textColor="@color/background_color"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,42 +45,49 @@
             android:layout_centerInParent="true"
             android:text="事件名称"
             android:textColor="@color/background_color"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"></ListView>
 
-    <LinearLayout
+    <RadioGroup
+        android:id="@+id/ll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
 
-        <Button
+        <RadioButton
+            android:id="@+id/btn_jiang"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:background="@drawable/selector_red_corners_button"
+            android:background="@drawable/shape_red_corners_button_pressed"
+            android:checked="true"
+            android:clickable="false"
             android:text="奖分事件"
-            android:textColor="@color/background_color"
-            android:textSize="20sp" />
+            android:textColor="@color/gray"
+            android:textSize="15sp" />
 
-        <Button
+        <RadioButton
+            android:id="@+id/btn_kou"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/selector_red_corners_button"
             android:text="扣分事件"
             android:textColor="@color/background_color"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
+    </RadioGroup>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ll"
+        android:layout_below="@+id/rl"></FrameLayout>
 
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
