--- a/MyApplicatuon/app/src/main/res/layout/activity_my_point.xml
+++ b/MyApplicatuon/app/src/main/res/layout/activity_my_point.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_my_point"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@null"
     tools:context="www.aiyi.com.myapplicatuon.activity.MyPointActivity">
 
     <LinearLayout
@@ -16,7 +17,7 @@
         <RelativeLayout
             android:id="@+id/rl_ig"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
@@ -48,7 +49,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="10dp"
                 android:paddingLeft="12dp"
-                android:paddingTop="12dp"
+                android:paddingTop="14dp"
                 android:text="2016年11月"
                 android:textColor="@color/background_color"
                 android:textSize="20sp" />
@@ -56,7 +57,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/view"
@@ -68,7 +69,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:text="本月奖分"
-                android:textSize="20sp" />
+                android:textColor="@color/gray"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/point1"
@@ -78,11 +80,11 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="10dp"
+                android:paddingTop="5dp"
                 android:singleLine="true"
                 android:text="0分"
                 android:textColor="@color/green"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
 
         </RelativeLayout>
@@ -95,7 +97,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/view"
@@ -107,7 +109,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:text="本月扣分"
-                android:textSize="20sp" />
+                android:textColor="@color/gray"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/point2"
@@ -117,12 +120,12 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="10dp"
+                android:paddingTop="5dp"
                 android:singleLine="true"
                 android:text="0分"
                 android:textColor="@color/red"
 
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
 
         </RelativeLayout>
@@ -135,7 +138,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/view"
@@ -147,7 +150,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:text="我的总分"
-                android:textSize="20sp" />
+                android:textColor="@color/gray"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/point3"
@@ -157,10 +161,11 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="10dp"
+                android:paddingTop="5dp"
                 android:singleLine="true"
                 android:text="0分"
-                android:textSize="20sp" />
+                android:textColor="@color/gray"
+                android:textSize="15sp" />
 
 
         </RelativeLayout>
@@ -173,6 +178,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_detail"
         style="@style/common_button_style"
         android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
