--- a/MyApplicatuon/app/src/main/res/layout/me_fragment.xml
+++ b/MyApplicatuon/app/src/main/res/layout/me_fragment.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -43,7 +44,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
@@ -54,7 +55,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:text="个人账号"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/phone"
@@ -64,10 +65,10 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="18778912798"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
@@ -80,7 +81,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
@@ -91,7 +92,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:text="入职时间"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/time"
@@ -101,10 +102,10 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="2016.11.01"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
@@ -117,7 +118,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
@@ -128,7 +129,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:text="生日"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/birthday"
@@ -138,10 +139,10 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="1991-02-01"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
@@ -154,7 +155,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
@@ -165,7 +166,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:text="部门"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/bumen"
@@ -175,10 +176,10 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="行政部"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
@@ -191,7 +192,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
@@ -202,7 +203,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:text="职务"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/work"
@@ -212,10 +213,10 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="行政主管"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
@@ -228,18 +229,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/view">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:text="手机"
-            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/phonenumber"
@@ -249,10 +242,22 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:singleLine="true"
             android:text="18778912798"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="22dp"
+            android:layout_marginStart="22dp"
+            android:text="手机"
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
