--- a/MyApplicatuon/app/src/main/res/layout/activity_detail_point.xml
+++ b/MyApplicatuon/app/src/main/res/layout/activity_detail_point.xml
@@ -65,11 +65,11 @@
             android:layout_height="40dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_red_corners_button_pressed"
+            android:background="@drawable/selector_red_corners_button"
             android:checked="true"
-            android:clickable="false"
+            android:clickable="true"
             android:text="奖分事件"
-            android:textColor="@color/gray"
+            android:textColor="@color/background_color"
             android:textSize="15sp" />
 
         <RadioButton
@@ -85,6 +85,7 @@
     </RadioGroup>
 
     <FrameLayout
+        android:id="@+id/fl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ll"
