--- a/MyApplicatuon/app/src/main/res/values/styles.xml
+++ b/MyApplicatuon/app/src/main/res/values/styles.xml
@@ -50,5 +50,14 @@
         <item name="android:layout_gravity">center_horizontal</item>
 
     </style>
+    <style name="CommonListViewStyle">
+        <item name="android:divider">@drawable/list_view_divider</item>
+        <item name="android:listSelector">@drawable/list_item_selector</item>
+        <item name="android:fadingEdge">none</item>
+        <item name="android:scrollbars">none</item>
+        <item name="android:fastScrollEnabled">false</item>
+        <item name="android:scrollingCache">true</item>
+        <item name="android:smoothScrollbar">true</item>
+    </style>
 
 </resources>
